--- a/Applications/MICrONS/Accessing_Neuron_Graph_Objects.ipynb
+++ b/Applications/MICrONS/Accessing_Neuron_Graph_Objects.ipynb
@@ -283,7 +283,10 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "scrolled": false
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [
     {
