--- a/Applications/MICrONS/Adding_Features_To_neuron_G.ipynb
+++ b/Applications/MICrONS/Adding_Features_To_neuron_G.ipynb
@@ -18,9 +18,9 @@
    "source": [
     "from os import sys\n",
     "sys.path.append(\"../../neuron_morphology_tools/\")\n",
-    "#!git clone https://github.com/celiibrendan/python_tools\n",
-    "#sys.path.append(\"....path to/python_tools/python_tools\")\n",
-    "sys.path.append(\"/python_tools/python_tools/\")\n"
+    "#!git clone https://github.com/celiibrendan/datasci_tools\n",
+    "#sys.path.append(\"....path to/datasci_tools/datasci_tools\")\n",
+    "sys.path.append(\"/datasci_tools/datasci_tools/\")\n"
    ]
   },
   {
@@ -35,7 +35,7 @@
     "import neuron_nx_utils as nxu\n",
     "import neuron_nx_feature_processing as nxf\n",
     "\n",
-    "#python_tools package modules\n",
+    "#datasci_tools package modules\n",
     "import system_utils as su"
    ]
   },
