--- a/Applications/MICrONS/Analyzing_microns_connectome.ipynb
+++ b/Applications/MICrONS/Analyzing_microns_connectome.ipynb
@@ -66,6 +66,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "a97b2fc6-a7d9-447d-92fe-305b866e6238",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'G' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28mlen\u001b[39m(\u001b[43mG\u001b[49m.nodes())\n",
+      "\u001b[31mNameError\u001b[39m: name 'G' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "len(G.nodes())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "id": "cb31a377-4e08-4221-8a13-bff5135446a1",
    "metadata": {},
