--- a/Applications/Tutorials/neuron_graph_data_access.ipynb
+++ b/Applications/Tutorials/neuron_graph_data_access.ipynb
@@ -643,7 +643,9 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "c1c99093-73d7-4863-876c-00f1c8470bed",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
